# cctbx

./: .gitmodules  README.md  azure-pipelines.yml
.azure-pipelines/: azure-pipelines-conda-forge-test.yml  azure-pipelines-conda-forge.yml  azure-pipelines-email-diff.yml  azure-pipelines-feedstock-update.yml  azure-pipelines-nightly-test.yml  azure-pipelines-nightly-update.yml  conda-forge-linux.yml  conda-forge-osx.yml  conda-forge-win.yml  test-linux.yml  test-osx.yml  test-unix.yml  test-win.yml
.azure-pipelines/scripts/: download-phenix-regression.py
.azure-pipelines/templates/: test-unix.yml
.github/workflows/: make_pip_package.yml  nightly_tests.yml
scripts/: convert.py  download-azure-artifact.py
wheel/: MANIFEST.in  convert.py  dummy.c  manylinux-policy.json  pyproject.toml  setup.py  update_version.py
wheel_cctbx/: pyproject.toml
