[build-system]
requires = ["setuptools"]

[project]
name = "cctbx-base"
version = "2025.4"
dependencies = ["matplotlib", "numpy", "six"]
license = {file = "LICENSE.txt"}

description = "The Computational Crystallography Toolbox (cctbx) is being developed as the open source component of the Phenix system. The goal of the Phenix project is to advance automation of macromolecular structure determination. Phenix depends on the cctbx, but not vice versa. This hierarchical approach enforces a clean design as a reusable library. The cctbx is therefore also useful for small-molecule crystallography and even general scientific applications."
authors = [{name = "CCTBX developers"}]
maintainers = [{name = "CCTBX developers", email="cctbx@cci.lbl.gov"}]

requires-python = ">=3.9"
readme = "README.md"

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)',
  'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: C++',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
]

[project.urls]
homepage = "https://github.com/cctbx/cctbx_project"
documentation = "https://cci.lbl.gov/docs/cctbx"
source = "https://github.com/cctbx/cctbx_project"
download = "https://github.com/cctbx/cctbx_project/releases"
tracker = "https://github.com/cctbx/cctbx_project/issues"
"release notes" = "https://github.com/cctbx/cctbx_project/releases"
